[FIX] sap.m.PlanningCalendar: days aligned correctly in RTL
- "text-align" is not mirrored because "start" and "end" are available to support RTL.
IE does not support those and shall receive special CSS rules.

BCP: 1780414532

(cherry picked from commit a76836736b63dca93121c577bb067a36d0ed0b58)
CR-Id: 002075125800004738412017

--- a/src/sap.ui.unified/src/sap/ui/unified/themes/sap_hcb/Calendar.less
+++ b/src/sap.ui.unified/src/sap/ui/unified/themes/sap_hcb/Calendar.less
@@ -578,7 +578,7 @@ html.sap-desktop .sapUiSizeCompact .sapUiCalItemNow:focus > .sapUiCalItemText{
 	padding-top: 0;
 	padding-left: 50%;
 	line-height: inherit;
-	text-align: left;
+	text-align: start;
 }
 
 html.sap-desktop .sapUiSizeCompact .sapUiCalNoNameLine > .sapUiCalItems > .sapUiCalItem:focus > .sapUiCalItemText,
@@ -599,8 +599,32 @@ html[data-sap-ui-browser^="ff"].sap-desktop .sapUiSizeCompact .sapUiCalNoNameLin
 	line-height: inherit;
 	padding-top: 0;
 	padding-right: 0.5rem;
-	text-align: right;
+	text-align: end;
 	box-sizing: border-box;
+}
+
+html[data-sap-ui-browser ^= "ie"], html[data-sap-ui-browser^="ed"] {
+	.sapUiSizeCompact.sapUiCalNoNameLine > .sapUiCalItems > .sapUiCalItem > .sapUiCalItemText,
+	.sapUiSizeCompact .sapUiCalNoNameLine > .sapUiCalItems > .sapUiCalItem > .sapUiCalItemText{
+		text-align: left;
+	}
+
+	.sapUiSizeCompact.sapUiCalNoNameLine > .sapUiCalItems > .sapUiCalItem > .sapUiCalDayName,
+	.sapUiSizeCompact .sapUiCalNoNameLine > .sapUiCalItems > .sapUiCalItem > .sapUiCalDayName{
+		text-align: right;
+	}
+}
+
+html[dir=rtl][data-sap-ui-browser ^= "ie"], html[dir=rtl][data-sap-ui-browser^="ed"] {
+	.sapUiSizeCompact.sapUiCalNoNameLine > .sapUiCalItems > .sapUiCalItem > .sapUiCalItemText,
+	.sapUiSizeCompact .sapUiCalNoNameLine > .sapUiCalItems > .sapUiCalItem > .sapUiCalItemText{
+		text-align: right;
+	}
+
+	.sapUiSizeCompact.sapUiCalNoNameLine > .sapUiCalItems > .sapUiCalItem > .sapUiCalDayName,
+	.sapUiSizeCompact .sapUiCalNoNameLine > .sapUiCalItems > .sapUiCalItem > .sapUiCalDayName{
+		text-align: left;
+	}
 }
 
 html.sap-desktop .sapUiSizeCompact .sapUiCalNoNameLine > .sapUiCalItems > .sapUiCalItem:focus > .sapUiCalDayName,
